# pyfds

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHAPTER3_ANALYSIS.md  DOCS_SETUP.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_FINAL_STATUS.md  DOCUMENTATION_PROGRESS.md  DOCUMENTATION_STATUS.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  MANAGER_QUICK_REFERENCE.md  MANAGER_TEST_COVERAGE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  apartment_fire.fds  circular_burner.fds  coverage.json  mkdocs.yml  mult_example.fds  pyproject.toml  room_fire.fds  thermal_boundary_conditions.fds
.github/workflows/: docs.yml  test.yml
docs/: Manager_Architecture_Migration_Guide.md  Phase3_Implementation_Quick_Guide.md  PyFDS_Quick_Reference.md  index.md
docs-mkdocs/: README.md  index.md
docs-mkdocs/about/: acknowledgments.md  changelog.md  citation.md  index.md
docs-mkdocs/api/: index.md
docs-mkdocs/development/: architecture.md  index.md  managers.md  releases.md  testing.md
docs-mkdocs/examples/: advanced.md  basic.md  index.md  parametric.md  special.md  workflows.md
docs-mkdocs/execution/: analysis.md  jobs.md  visualization.md
docs-mkdocs/getting-started/: concepts.md  installation.md  quickstart.md
docs-mkdocs/guide/: boundaries.md  builders.md  building-simulations.md  combustion.md  controls.md  devices.md  global-settings.md  initial-conditions.md  ramps.md
docs-mkdocs/javascripts/: mathjax.js
docs-mkdocs/reference/: fds-background.md  glossary.md  index.md  namelist-reference.md  troubleshooting.md  validation.md
docs/about/: changelog.md  citation.md
docs/api/: exceptions.md  index.md  species.md
docs/development/: architecture.md  chemical_species_implementation.md  contributing.md  fire_pyrolysis_implementation_plan.md  index.md  managers.md  refactoring-guide.md  releases.md  test-reorganization-plan.md  testing.md  thermal_boundary_refactor.md
docs/examples/: advanced.md  basic.md  index.md  parametric.md  special.md  species.md  workflows.md
docs/execution/: analysis.md  index.md  jobs.md  running.md
docs/getting-started/: concepts.md  index.md  quickstart.md
docs/guide/: boundaries.md  builders.md  building-simulations.md  burn_away.md  combustion.md  combustion_chemistry.md  controls.md  devices.md  domain.md  fire-sources.md  geometry.md  global-settings.md  index.md  initial-conditions.md  liquid_fuels.md  materials-surfaces.md  particles.md  pyrolysis.md  ramps.md  species.md  suppression-systems.md
docs/includes/: abbreviations.md
docs/reference/: faq.md  fds-background.md  glossary.md  namelist-reference.md  troubleshooting.md  validation.md
docs/stylesheets/: extra.css
examples/: 01_simple_room_fire.py  02_fire_with_sprinkler.py  03_multi_mesh_parallel.py  04_advanced_combustion.py  README.md  advanced_room.py  basic_room_fire.py  builder_example.py  circular_burner.py  execution_demo.py  hvac_system.py  mult_example.py  parametric_study.py  phase3_example.py  phase3_thermal_boundary_conditions.py  solid_phase_heat_transfer.py  stage2_quickstart.py  stage2_sprinkler_example.py  validation_strategy_example.py  wildfire_simulation.py
examples/_common/: __init__.py
examples/complex_geometry/: README.md  __init__.py  cylinder_geometry.py  hole_geometry.py  obst_array.py  sphere_geometry.py
examples/controls/: README.md  __init__.py  control_logic.py  device_activation.py  hrr_freeze.py  vent_activation.py
examples/fires/: __init__.py  burn_away.py  circular_burner.py  heat_of_combustion.py  pool_fire.py  simple_burner.py  spray_burner.py
references/: FDS_Python_Connector_Implementation_Plan.md  Manager_Architecture_Migration_Guide.md  PyFDS_Phase3_Complex_Namelists_Implementation.md  PyFDS_VENT_MISC_Implementation_Plan.md
tests/: conftest.py
(+308 files in other folders)
