[project]
name = "pyfds"
version = "0.1.0"
description = "A Python interface to NIST Fire Dynamics Simulator (FDS)"
readme = "README.md"
authors = [
    { name = "Grayson Bellamy", email = "graysontbellamy@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "matplotlib>=3.10.7",
    "h5py>=3.15.1",
    "xarray>=2025.11.0",
    "pydantic>=2.12.4",
    "click>=8.3.1",
    "tqdm>=4.67.1",
]
keywords = ["fds", "fire-dynamics-simulator", "cfd", "fire-modeling", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.5",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
]

[project.scripts]
pyfds = "pyfds.cli.main:cli"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "TCH",   # flake8-type-checking
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (Pydantic uses this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PTH", "S101"]
"examples/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["pyfds"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=src/pyfds",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/pyfds"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
exclude = ["tests/", "examples/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "matplotlib.*",
    "h5py.*",
    "polars.*",
    "xarray.*",
    "tqdm.*",
    "click.*",
]
ignore_missing_imports = true
